--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,8 +17,9 @@ jobs:
       - run:
           name: "Say hello"
           command: "echo Hello, World!"
-
-# Invoke jobs via workflows
+          jobs:
+            -Print-helloworld
+#Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
   say-hello-workflow:
