--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,8 +17,8 @@ jobs:
       - run:
           name: "Say hello"
           command: "echo Hello, World!"
-          jobs:
-            -Print-helloworld
+          job
+            Print-helloworld
 #Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
